[package]
name = "norem-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
once_cell = "1.18.0"
itertools = "0.12.0"
nom = "7.1.3"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
tempfile = "3.10.1"
expect-test = "1.4.1"
snailquote = "0.3.1"
